refactor: update Polybar configuration for theme adaptability and semantic colors
- Replaced hardcoded color values with theme-adaptive colors using xrdb.
- Introduced semantic colors for improved theming consistency across modules.
- Updated audio, light, net, and resources modules to utilize new color variables.
- Enhanced executable player script to dynamically fetch theme colors.

--- a/home/dot_config/polybar/configs/default/master.conf
+++ b/home/dot_config/polybar/configs/default/master.conf
@@ -26,14 +26,29 @@ secondary = ${xrdb:color2}
 alert = ${xrdb:color3}
 moderate = ${xrdb:color11}
 urgent = ${xrdb:color9}
-trim = #8fa1b3
-blue = #8fa1b3
-green = #a3be8c
-pink = #bf616a
-orange = #ebcb8b
-purple = #b48ead
-yellow = #ebcb8b
-border = #c0c5ce
+
+; Theme-adaptive colors (replace hardcoded values)
+trim = ${xrdb:color6}
+blue = ${xrdb:color12}
+green = ${xrdb:color10}
+pink = ${xrdb:color9}
+orange = ${xrdb:color11}
+purple = ${xrdb:color13}
+yellow = ${xrdb:color11}
+border = ${xrdb:color8}
+
+; Semantic colors for better theming
+success = ${xrdb:color10}
+warning = ${xrdb:color11}
+error = ${xrdb:color9}
+info = ${xrdb:color12}
+disabled = ${xrdb:color8}
+accent = ${xrdb:color14}
+
+; Theme-specific overrides (can be set via environment variables)
+theme-accent = ${env:POLYBAR_THEME_ACCENT:${colors.accent}}
+theme-success = ${env:POLYBAR_THEME_SUCCESS:${colors.success}}
+theme-warning = ${env:POLYBAR_THEME_WARNING:${colors.warning}}
 
 [settings]
 screenchange-reload = false
