--- a/home/dot_config/polybar/configs/default/modules/audio.conf
+++ b/home/dot_config/polybar/configs/default/modules/audio.conf
@@ -9,11 +9,11 @@ click-left = dots microphone --toggle 2>/dev/null &
 inherit = module/pipewire
 format-volume = %{T4}%{T-} <label-volume> <bar-volume>
 bar-volume-width = 5
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-0 = ${colors.success}
+bar-volume-foreground-1 = ${colors.success}
+bar-volume-foreground-2 = ${colors.success}
+bar-volume-foreground-3 = ${colors.success}
+bar-volume-foreground-4 = ${colors.success}
 bar-volume-gradient = true
 bar-volume-indicator = |
 bar-volume-indicator-font = 3
