--- a/home/dot_config/polybar/configs/default/modules/net.conf
+++ b/home/dot_config/polybar/configs/default/modules/net.conf
@@ -38,7 +38,7 @@ type = internal/network
 interface = ${env:POLYBAR_MODULES_ETH_IFACE:}
 interval = 3.0
 
-format-connected-underline = #55aa55
+format-connected-underline = ${colors.success}
 format-connected-prefix = " 󰈀 "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
