--- a/home/dot_config/polybar/configs/default/modules/resources.conf
+++ b/home/dot_config/polybar/configs/default/modules/resources.conf
@@ -42,7 +42,7 @@ ramp-capacity-3 = 
 ramp-capacity-4 = 
 ramp-capacity-0-foreground = ${colors.urgent}
 ramp-capacity-1-foreground = ${colors.moderate}
-ramp-capacity-foreground   = ${colors.blue}
+ramp-capacity-foreground   = ${colors.info}
 
 bar-capacity-width = 10
 animation-charging-0 = " "
