feat: integrate smart color management for Polybar profiles
- Added a new script to analyze color palettes and suggest optimal semantic colors.
- Implemented smart color setup in Polybar profile initialization, enhancing theme adaptability.
- Updated existing Polybar configurations to utilize new smart color variables for improved theming consistency.
- Enhanced cleanup functions to remove smart color variables upon profile exit.

--- a/home/dot_config/polybar/configs/default/modules/datetime.conf
+++ b/home/dot_config/polybar/configs/default/modules/datetime.conf
@@ -10,7 +10,7 @@ time-alt = %H:%M:%S
 
 format-prefix = 
 format-font = 5
-format-prefix-foreground = ${xrdb:color7}
+format-prefix-foreground = ${colors.info}
 format-underline =
 format-foreground = ${colors.foreground}
 
@@ -26,6 +26,6 @@ label = %output:0%
 
 format-prefix = 󰧒
 format-font = 4
-format-prefix-foreground = ${xrdb:color7}
+format-prefix-foreground = ${colors.info}
 format-underline =
 format-foreground = ${colors.foreground}
