--- a/home/dot_config/polybar/configs/default/modules/fs.conf
+++ b/home/dot_config/polybar/configs/default/modules/fs.conf
@@ -4,7 +4,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{T5}%{T-} %mountpoint% %percentage_used%% of %total%
-label-mounted-foreground = ${xrdb:color7}
+label-mounted = %{T5}%{T-} %mountpoint% %percentage_used%% of %total%
+label-mounted-foreground = ${colors.info}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground}
