--- a/home/dot_config/polybar/configs/default/modules/menu.conf
+++ b/home/dot_config/polybar/configs/default/modules/menu.conf
@@ -3,10 +3,10 @@ type = custom/menu
 
 label-open-font = 2
 label-open = "󰘖"
-label-open-foreground = ${xrdb:color9}
+label-open-foreground = ${colors.accent}
 label-close = "󰘕"
 label-close-font = 2
-label-close-foreground = ${xrdb:color7}
+label-close-foreground = ${colors.foreground-alt}
 label-separator = "  "
 label-separator-font = 2
 # Top level
