--- a/home/dot_config/polybar/configs/default/modules/resources.conf
+++ b/home/dot_config/polybar/configs/default/modules/resources.conf
@@ -3,20 +3,20 @@ type = internal/cpu
 interval = 2
 format-prefix = 
 format-prefix-font = 5
-format-prefix-foreground = ${xrdb:color13}
+format-prefix-foreground = ${colors.accent}
 format-underline =
 label = " %percentage:2%%"
-label-foreground = ${xrdb:color7}
+label-foreground = ${colors.foreground-alt}
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = 
 format-prefix-font = 5
-format-prefix-foreground = ${xrdb:color14}
+format-prefix-foreground = ${colors.info}
 format-underline =
 label = " %percentage_used%%"
-label-foreground = ${xrdb:color7}
+label-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
