--- a/home/dot_config/polybar/configs/default/master.conf
+++ b/home/dot_config/polybar/configs/default/master.conf
@@ -27,23 +27,31 @@ alert = ${xrdb:color3}
 moderate = ${xrdb:color11}
 urgent = ${xrdb:color9}
 
-; Theme-adaptive colors (replace hardcoded values)
-trim = ${xrdb:color6}
-blue = ${xrdb:color12}
-green = ${xrdb:color10}
-pink = ${xrdb:color9}
-orange = ${xrdb:color11}
-purple = ${xrdb:color13}
-yellow = ${xrdb:color11}
+; Smart theme-adaptive colors (set by dots-smart-colors)
+trim = ${env:SMART_COLOR_INFO:${xrdb:color6}}
+blue = ${env:SMART_COLOR_BLUE:${xrdb:color12}}
+green = ${env:SMART_COLOR_GREEN:${xrdb:color10}}
+pink = ${env:SMART_COLOR_PINK:${xrdb:color9}}
+orange = ${env:SMART_COLOR_ORANGE:${xrdb:color11}}
+purple = ${env:SMART_COLOR_MAGENTA:${xrdb:color13}}
+yellow = ${env:SMART_COLOR_YELLOW:${xrdb:color11}}
 border = ${xrdb:color8}
 
-; Semantic colors for better theming
-success = ${xrdb:color10}
-warning = ${xrdb:color11}
-error = ${xrdb:color9}
-info = ${xrdb:color12}
+; Basic color mappings (using smart colors)
+red = ${env:SMART_COLOR_RED:${xrdb:color9}}
+cyan = ${env:SMART_COLOR_CYAN:${xrdb:color14}}
+magenta = ${env:SMART_COLOR_MAGENTA:${xrdb:color13}}
+white = ${env:SMART_COLOR_WHITE:${xrdb:color15}}
+black = ${env:SMART_COLOR_BLACK:${xrdb:color0}}
+gray = ${env:SMART_COLOR_GRAY:${xrdb:color8}}
+
+; Semantic colors for better theming (using smart colors)
+success = ${env:SMART_COLOR_SUCCESS:${xrdb:color10}}
+warning = ${env:SMART_COLOR_WARNING:${xrdb:color11}}
+error = ${env:SMART_COLOR_ERROR:${xrdb:color9}}
+info = ${env:SMART_COLOR_INFO:${xrdb:color12}}
 disabled = ${xrdb:color8}
-accent = ${xrdb:color14}
+accent = ${env:SMART_COLOR_ACCENT:${xrdb:color14}}
 
 ; Theme-specific overrides (can be set via environment variables)
 theme-accent = ${env:POLYBAR_THEME_ACCENT:${colors.accent}}
