--- a/home/dot_config/polybar/configs/default/modules/jgmenu.conf
+++ b/home/dot_config/polybar/configs/default/modules/jgmenu.conf
@@ -2,6 +2,6 @@
 type = custom/text
 label = 
 label-font = 5
-label-foreground = ${xrdb:color7}
+label-foreground = ${colors.info}
 click-left = "dots jgmenu > /dev/null 2>&1 &"
 click-right = exo-open ~/.config/jgmenu/jgmenurc
