--- a/home/dot_config/polybar/configs/default/modules/keyboard.conf
+++ b/home/dot_config/polybar/configs/default/modules/keyboard.conf
@@ -9,7 +9,7 @@ format         = <label-layout> <label-indicator>
 format-spacing = 0
 
 format-prefix = "%{T5}󰌌%{T-} "
-format-prefix-foreground = ${xrdb:color7}
+format-prefix-foreground = ${colors.info}
 format-prefix-underline = ${colors.background}
 
 ; Available tokens:
@@ -36,7 +36,7 @@ format         = <label-layout> <label-indicator>
 format-spacing = 0
 
 format-prefix = "%{T5}󰌌%{T-} "
-format-prefix-foreground = ${xrdb:color7}
+format-prefix-foreground = ${colors.info}
 format-prefix-underline = ${colors.background}
 
 label-layout = %name%
