--- a/home/dot_config/polybar/configs/default/modules/light.conf
+++ b/home/dot_config/polybar/configs/default/modules/light.conf
@@ -42,5 +42,5 @@ format = <label>
 type = custom/text
 label = 󰖔
 label-font = 4
-label-foreground = ${xrdb:color7}
+label-foreground = ${colors.info}
 click-left = dots night-mode auto
