feat: update Polybar configurations to utilize semantic colors for improved theming
- Replaced hardcoded color values with semantic color variables across multiple modules, enhancing adaptability and consistency.
- Updated alert, moderate, and urgent colors in the main configuration.
- Adjusted muted and offline label colors in audio and GitHub modules to use the new disabled color.
- Enhanced workspace and miscellaneous module configurations to utilize accent colors for better visual distinction.

--- a/home/dot_config/polybar/configs/default/master.conf
+++ b/home/dot_config/polybar/configs/default/master.conf
@@ -23,9 +23,9 @@ foreground = ${xrdb:foreground}
 foreground-alt = ${xrdb:color5}
 primary = ${xrdb:color1}
 secondary = ${xrdb:color2}
-alert = ${xrdb:color3}
-moderate = ${xrdb:color11}
-urgent = ${xrdb:color9}
+alert = ${colors.error}
+moderate = ${colors.warning}
+urgent = ${colors.error}
 
 ; Smart theme-adaptive colors (set by dots-smart-colors)
 trim = ${env:SMART_COLOR_INFO:${xrdb:color6}}
@@ -50,7 +50,7 @@ success = ${env:SMART_COLOR_SUCCESS:${xrdb:color10}}
 warning = ${env:SMART_COLOR_WARNING:${xrdb:color11}}
 error = ${env:SMART_COLOR_ERROR:${xrdb:color9}}
 info = ${env:SMART_COLOR_INFO:${xrdb:color12}}
-disabled = ${xrdb:color8}
+disabled = ${colors.gray}
 accent = ${env:SMART_COLOR_ACCENT:${xrdb:color14}}
 
 ; Theme-specific overrides (can be set via environment variables)
