--- a/home/dot_config/polybar/configs/default/modules/audio.conf
+++ b/home/dot_config/polybar/configs/default/modules/audio.conf
@@ -33,4 +33,4 @@ label-volume = %percentage%%
 label-volume-foreground = ${colors.foreground}
 
 label-muted =  muted
-label-muted-foreground = ${colors.foreground-alt}
+label-muted-foreground = ${colors.disabled}
