--- a/home/dot_config/polybar/configs/default/modules/resources.conf
+++ b/home/dot_config/polybar/configs/default/modules/resources.conf
@@ -67,7 +67,7 @@ format-warn-underline =
 
 label = %temperature-c%
 label-warn = 󱗗 %temperature-c%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = ${colors.warning}
 label-foreground = ${colors.foreground}
 
 ramp-0 = 
