--- a/home/dot_config/polybar/configs/default/modules/workspaces.conf
+++ b/home/dot_config/polybar/configs/default/modules/workspaces.conf
@@ -51,7 +51,7 @@ label-monitor-foreground = ${colors.foreground-alt}
 label-active = %name%
 label-active-background =
 label-active-foreground = ${colors.foreground}
-label-active-underline = ${colors.foreground}
+label-active-underline = ${colors.accent}
 label-active-padding = 2
 
 ; Used for workspaces without windows
