--- a/home/dot_config/polybar/configs/default/modules/misc.conf
+++ b/home/dot_config/polybar/configs/default/modules/misc.conf
@@ -20,5 +20,5 @@ label-foreground = ${colors.background}
 [module/dots]
 type = custom/text
 label = "  󰇙  "
-label-foreground = ${colors.foreground-alt}
+label-foreground = ${colors.accent}
 label-font = 6
