--- a/home/dot_config/i3/config.d/colors.conf
+++ b/home/dot_config/i3/config.d/colors.conf
@@ -1,30 +1,10 @@
-# Color palette used for the terminal ( ~/.Xresources file )
-# Colors are gathered based on the documentation:
-# https://i3wm.org/docs/userguide.html#xresources
-# Change the variable name at the place you want to match the color
-# of your terminal like this:
-set_from_resource $base00 i3wm.color0
-set_from_resource $base01 i3wm.color1
-set_from_resource $base02 i3wm.color2
-set_from_resource $base03 i3wm.color3
-set_from_resource $base04 i3wm.color4
-set_from_resource $base05 i3wm.color5
-set_from_resource $base06 i3wm.color6
-set_from_resource $base07 i3wm.color7
-set_from_resource $base08 i3wm.color8
-set_from_resource $base09 i3wm.color9
-set_from_resource $base0A i3wm.color10
-set_from_resource $base0B i3wm.color11
-set_from_resource $base0C i3wm.color12
-set_from_resource $base0D i3wm.color13
-set_from_resource $base0E i3wm.color14
-set_from_resource $base0F i3wm.color15
+# Smart Colors Integration for i3
+# This file includes smart color directives with actual color values
+# Smart colors automatically adapt to any theme for optimal readability
 
-# Basic color configuration using the Base16 variables for windows and borders.
-# Property Name         Border  BG      Text    Indicator Child Border
-client.focused          $base05 $base0D $base00 $base03 $base03
-client.focused_inactive $base01 $base01 $base05 $base01 $base01
-client.unfocused        $base01 $base00 $base05 $base01 $base01
-client.urgent           $base08 $base08 $base00 $base08 $base08
-client.placeholder      $base00 $base00 $base05 $base00 $base00
-client.background       $base07
+# Include smart colors (contains client.* directives with actual color values)
+include smart-colors.conf
+
+# Note: The smart-colors.conf file contains the actual client.* color directives
+# with computed color values, not variables, because i3 cannot expand variables
+# defined in included files.
