feat: add smart color integration for Polybar and create symbolic links for easy access

--- a/home/dot_config/polybar/configs/default/master.conf
+++ b/home/dot_config/polybar/configs/default/master.conf
@@ -1,62 +1,5 @@
-; colors from 0 to 15 mean the following based on the base16 color scheme:
-;   - color0: Default Background
-;   - color1: Lighter Background (Used for status bars, line number and folding marks)
-;   - color2: Selection Background
-;   - color3: Comments, Invisibles, Line Highlighting
-;   - color4: Dark Foreground (Used for status bars)
-;   - color5: Default Foreground, Caret, Delimiters, Operators
-;   - color6: Light Foreground (Not often used)
-;   - color7: Light Background (Not often used)
-;   - color8: Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted
-;   - color9: Integers, Boolean, Constants, XML Attributes, Markup Link Url
-;   - color10: Classes, Markup Bold, Search Text Background
-;   - color11: Strings, Inherited Class, Markup Code, Diff Inserted
-;   - color12: Support, Regular Expressions, Escape Characters, Markup Quotes
-;   - color13: Functions, Methods, Attribute IDs, Headings
-;   - color14: Keywords, Storage, Selector, Markup Italic, Diff Changed
-;   - color15: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
-
-[colors]
-background = ${xrdb:background}
-background-alt = ${xrdb:color1}
-foreground = ${xrdb:foreground}
-foreground-alt = ${xrdb:color5}
-primary = ${xrdb:color1}
-secondary = ${xrdb:color2}
-alert = ${colors.error}
-moderate = ${colors.warning}
-urgent = ${colors.error}
-
-; Smart theme-adaptive colors (set by dots-smart-colors)
-trim = ${env:SMART_COLOR_INFO:${xrdb:color6}}
-blue = ${env:SMART_COLOR_BLUE:${xrdb:color12}}
-green = ${env:SMART_COLOR_GREEN:${xrdb:color10}}
-pink = ${env:SMART_COLOR_PINK:${xrdb:color9}}
-orange = ${env:SMART_COLOR_ORANGE:${xrdb:color11}}
-purple = ${env:SMART_COLOR_MAGENTA:${xrdb:color13}}
-yellow = ${env:SMART_COLOR_YELLOW:${xrdb:color11}}
-border = ${xrdb:color8}
-
-; Basic color mappings (using smart colors)
-red = ${env:SMART_COLOR_RED:${xrdb:color9}}
-cyan = ${env:SMART_COLOR_CYAN:${xrdb:color14}}
-magenta = ${env:SMART_COLOR_MAGENTA:${xrdb:color13}}
-white = ${env:SMART_COLOR_WHITE:${xrdb:color15}}
-black = ${env:SMART_COLOR_BLACK:${xrdb:color0}}
-gray = ${env:SMART_COLOR_GRAY:${xrdb:color8}}
-
-; Semantic colors for better theming (using smart colors)
-success = ${env:SMART_COLOR_SUCCESS:${xrdb:color10}}
-warning = ${env:SMART_COLOR_WARNING:${xrdb:color11}}
-error = ${env:SMART_COLOR_ERROR:${xrdb:color9}}
-info = ${env:SMART_COLOR_INFO:${xrdb:color12}}
-disabled = ${colors.gray}
-accent = ${env:SMART_COLOR_ACCENT:${xrdb:color14}}
-
-; Theme-specific overrides (can be set via environment variables)
-theme-accent = ${env:POLYBAR_THEME_ACCENT:${colors.accent}}
-theme-success = ${env:POLYBAR_THEME_SUCCESS:${colors.success}}
-theme-warning = ${env:POLYBAR_THEME_WARNING:${colors.warning}}
+; Polybar colors configuration - includes smart color integration
+include-file = ~/.config/polybar/configs/default/colors.conf
 
 [settings]
 screenchange-reload = false
