--- a/home/dot_config/polybar/configs/default/config.ini
+++ b/home/dot_config/polybar/configs/default/config.ini
@@ -1,6 +1,11 @@
 [section/base]
-include-file = ~/.config/polybar/configs/default/modules.conf
+; Polybar colors configuration - includes smart color integration
+include-file = ~/.config/polybar/configs/default/colors.conf
+; Include other configuration files
+; These files should be created or modified as needed
+; to customize the appearance and functionality of Polybar.
 include-file = ~/.config/polybar/configs/default/master.conf
+include-file = ~/.config/polybar/configs/default/modules.conf
 include-file = ~/.config/polybar/configs/default/bars/common-top.conf
 include-file = ~/.config/polybar/configs/default/bars/common-bottom.conf
 include-file = ~/.config/polybar/configs/default/bars/i3-top.conf
