feat: update Polybar color configurations for improved visibility and aesthetics
- Changed foreground colors for various Polybar modules to enhance visual clarity and consistency.
- Updated `datetime`, `fs`, `jgmenu`, `keyboard`, `light`, and `resources` modules to use more distinct color values.
- Modified weather info script to utilize hex color values for better integration with smart colors.
- Set default Polybar profile in landscape-light rice configuration for streamlined user experience.

--- a/home/dot_config/polybar/configs/default/modules/fs.conf
+++ b/home/dot_config/polybar/configs/default/modules/fs.conf
@@ -5,6 +5,6 @@ interval = 25
 mount-0 = /
 
 label-mounted = %{T5}%{T-} %mountpoint% %percentage_used%% of %total%
-label-mounted-foreground = ${colors.info}
+label-mounted-foreground = ${colors.orange}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground}
