--- a/home/dot_config/polybar/configs/default/modules/resources.conf
+++ b/home/dot_config/polybar/configs/default/modules/resources.conf
@@ -13,7 +13,7 @@ type = internal/memory
 interval = 2
 format-prefix = 
 format-prefix-font = 5
-format-prefix-foreground = ${colors.info}
+format-prefix-foreground = ${colors.orange}
 format-underline =
 label = " %percentage_used%%"
 label-foreground = ${colors.foreground-alt}
@@ -42,7 +42,7 @@ ramp-capacity-3 = 
 ramp-capacity-4 = 
 ramp-capacity-0-foreground = ${colors.urgent}
 ramp-capacity-1-foreground = ${colors.moderate}
-ramp-capacity-foreground   = ${colors.info}
+ramp-capacity-foreground   = ${colors.cyan}
 
 bar-capacity-width = 10
 animation-charging-0 = " "
