refactor: update Polybar configurations for improved color consistency
- Changed foreground colors in various Polybar modules to use ${colors.foreground-alt} and ${colors.info} for better visual coherence.
- Updated `fs`, `i3`, `jgmenu`, `keyboard`, `light`, `menu`, `misc`, and `resources` modules to enhance readability and maintain a unified color scheme.
- Modified the `executable_player` and `executable_dots-smart-colors` scripts to incorporate new background and foreground variants, improving the smart colors system's adaptability.

--- a/home/dot_config/polybar/configs/default/modules/i3.conf
+++ b/home/dot_config/polybar/configs/default/modules/i3.conf
@@ -15,7 +15,7 @@ label-mode-background = ${colors.background}
 label-focused = %name%
 label-focused-background =
 label-focused-foreground = ${colors.foreground}
-label-focused-underline = ${colors.accent}
+label-focused-underline = ${colors.info}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
