--- a/home/dot_config/polybar/configs/default/modules/menu.conf
+++ b/home/dot_config/polybar/configs/default/modules/menu.conf
@@ -3,7 +3,7 @@ type = custom/menu
 
 label-open-font = 2
 label-open = "󰘖"
-label-open-foreground = ${colors.accent}
+label-open-foreground = ${colors.foreground-alt}
 label-close = "󰘕"
 label-close-font = 2
 label-close-foreground = ${colors.foreground-alt}
