--- a/home/dot_config/polybar/configs/default/modules/fs.conf
+++ b/home/dot_config/polybar/configs/default/modules/fs.conf
@@ -5,6 +5,6 @@ interval = 25
 mount-0 = /
 
 label-mounted = %{T5}%{T-} %mountpoint% %percentage_used%% of %total%
-label-mounted-foreground = ${colors.orange}
+label-mounted-foreground = ${colors.foreground-alt}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground}
