--- a/home/dot_config/polybar/configs/default/modules/light.conf
+++ b/home/dot_config/polybar/configs/default/modules/light.conf
@@ -15,7 +15,7 @@ bar-indicator-foreground = ${colors.foreground}
 bar-indicator-font = 3
 bar-fill = ─
 bar-fill-font = 4
-bar-fill-foreground = ${colors.accent}
+bar-fill-foreground = ${colors.info}
 bar-empty = ─
 bar-empty-font = 4
 bar-empty-foreground = ${colors.foreground-alt}
