--- a/home/dot_config/polybar/configs/default/modules/resources.conf
+++ b/home/dot_config/polybar/configs/default/modules/resources.conf
@@ -3,7 +3,7 @@ type = internal/cpu
 interval = 2
 format-prefix = 
 format-prefix-font = 5
-format-prefix-foreground = ${colors.accent}
+format-prefix-foreground = ${colors.foreground-alt}
 format-underline =
 label = " %percentage:2%%"
 label-foreground = ${colors.foreground-alt}
