refactor: update Polybar module color configurations for improved consistency
- Adjusted foreground colors in multiple Polybar modules to enhance visual coherence, including changes to `background`, `github`, `jgmenu`, `light`, `resources`, and `rices` modules.
- Updated the `executable_dots-smart-colors` script to improve semantic color lookup with theme awareness, allowing for better adaptability to light and dark themes.
- These modifications aim to streamline the overall color scheme and improve readability across the Polybar interface.

--- a/home/dot_config/polybar/configs/default/modules/light.conf
+++ b/home/dot_config/polybar/configs/default/modules/light.conf
@@ -42,5 +42,5 @@ format = <label>
 type = custom/text
 label = 󰖔
 label-font = 4
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.orange}
 click-left = dots night-mode auto
