--- a/home/dot_config/polybar/configs/default/modules/rices.conf
+++ b/home/dot_config/polybar/configs/default/modules/rices.conf
@@ -2,7 +2,7 @@
 type = custom/text
 label = 󰟪
 label-font = 4
-label-foreground = ${colors.foreground}
+label-foreground = ${colors.foreground-alt}
 label-background = ${colors.background}
 click-left = dots-rofi-rice-selector &
 click-right = exo-open ~/.local/share/dots/rices
