feat: add smart floating window functionality for i3
- Introduced a new script `executable_smart-float.sh` that toggles floating mode for windows, automatically resizing and centering them for optimal usability.
- Updated i3 configuration to bind the new smart floating functionality to the shortcut `$Mod+Shift+f`, enhancing window management capabilities.
- Set default minimum and maximum sizes for floating windows to ensure a comfortable viewing experience.

--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -166,8 +166,15 @@ bindsym $Mod+Shift+c reload
 bindsym $Mod+space floating toggle
 bindsym $Mod+Shift+space focus mode_toggle
 
+# Smart floating: toggle floating + center + resize to comfortable size
+bindsym $Mod+Shift+f exec --no-startup-id ~/.config/i3/smart-float.sh
+
 # Use Mouse+$mod to drag floating windows
 floating_modifier  $mod
+
+# Default floating window size (when windows become floating)
+floating_minimum_size 400 x 300
+floating_maximum_size 1400 x 900
 
 bindsym $Mod+Shift+z move scratchpad
 bindsym $Mod+z scratchpad show
