--- a/home/dot_config/polybar/configs/default/modules/datetime.conf
+++ b/home/dot_config/polybar/configs/default/modules/datetime.conf
@@ -10,7 +10,7 @@ time-alt = %H:%M:%S
 
 format-prefix = 
 format-font = 5
-format-prefix-foreground = ${colors.green}
+format-prefix-foreground = ${colors.pink}
 format-underline =
 format-foreground = ${colors.foreground}
 
@@ -26,6 +26,6 @@ label = %output:0%
 
 format-prefix = 󰧒
 format-font = 4
-format-prefix-foreground = ${colors.green}
+format-prefix-foreground = ${colors.pink}
 format-underline =
 format-foreground = ${colors.foreground}
