--- a/home/dot_config/picom/picom.conf
+++ b/home/dot_config/picom/picom.conf
@@ -9,7 +9,7 @@ wm-support = "none";
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 6;
+corner-radius = 12;
 
 # Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
 detect-rounded-corners = true;
@@ -52,19 +52,19 @@ backend = "xrender";
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 16)
-# Reduced radius to minimize corner artifacts
-shadow-radius = 8;
+# Increased radius for softer, more cozy shadows
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 0.12;
+shadow-opacity = 0.18;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# Adjusted for smaller shadow radius
-shadow-offset-x = -10;
+# Adjusted for softer shadow effect
+shadow-offset-x = -12;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# Adjusted for smaller shadow radius
-shadow-offset-y = -10;
+# Adjusted for softer shadow effect
+shadow-offset-y = -12;
 
 # NOTE: Using rules-based configuration instead - these old-style options are commented out
 # Clip shadows above windows (helps prevent corner artifacts)
