Optimized hyprland config

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -19,6 +19,9 @@ bind = $mainMod, T, exec, kitty
 # Application launcher
 bind = CTRL, Space, exec, ~/.local/bin/dots rofi-run -r
 
+# Clipboard manager
+bind = $mainMod, V, exec, ~/.local/bin/dots rofi-run -c
+
 # File manager
 bind = $mainMod, F, exec, thunar
 
