Refactor lockscreen management and update documentation
- Replaced references to betterlockscreen with dots-lockscreen throughout the documentation and scripts.
- Added a new Lockscreen.md file detailing the usage of dots-lockscreen with swaylock-effects.
- Updated EWW widgets and powermenu configurations to use dots-lockscreen for locking the screen.
- Removed obsolete scripts related to hyprlock and betterlockscreen.
- Enhanced the wal-reload functionality to support automatic updates for the new lockscreen system.
- Updated the dots-scripts registry to include the new lockscreen feature.
- Cleaned up configuration files and removed unused background and config files for the gruvbox-wayland rice theme.

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -213,13 +213,10 @@ bindle = SHIFT, XF86MonBrightnessDown, exec, ~/.local/bin/dots brightness "*" - 
 # ============================================================================
 
 # Full screenshot
-bind = , Print, exec, ~/.config/hypr/scripts/screenshot.sh full
+bind = , Print, exec, ~/.local/bin/dots screenshooter
 
 # Area screenshot
-bind = SHIFT, Print, exec, ~/.config/hypr/scripts/screenshot.sh area
-
-# Window screenshot
-bind = $mainMod, Print, exec, ~/.config/hypr/scripts/screenshot.sh window
+bind = SHIFT, Print, exec, ~/.local/bin/dots screenshooter -r
 
 # ============================================================================
 # System Control
